<resources>
    <string name="app_name">Lab2Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dress_code">Dress code: </string>
    <string name="place_the_dress_info_below">Place the dress info below:</string>
    <string name="dress_name">Dress name: </string>
    <string name="dress_size">Dress size: </string>
    <string name="dress_price">Dress price: </string>
    <string name="dress_colour">Dress colour: </string>
    <string name="dress_quantity">Dress quantity: </string>
    <string name="dress_desc">Dress description: </string>
    <string name="dress_tailoring_time">Tailoring time: </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="go_back">Go back</string>
    <string name="are_you_sure_you_want_to_delete_this_dress">Are you sure you want to delete this dress?</string>
    <string name="code">Code:</string>
    <string name="name">Name:</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="add_dress">Add dress</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>