<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DeleteDressFragment"
    android:orientation="vertical"
    android:layout_margin="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_this_dress"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/DressCodeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/DressNameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <ImageView
        android:id="@+id/iconImageViewID"
        android:layout_width="wrap_content"
        android:layout_height="174dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/dress1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonNo"
            android:theme="@style/AppTheme.ButtonBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/AppTheme.ButtonPink"
            android:text="@string/yes"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

    </LinearLayout>




</LinearLayout>